--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
       <h4>Your Balance</h4>
       <h1 id="balance">$0.00</h1>
       <h4>Current balance in UAH</h4>
-      <h1 class="balanceUah">₴0.00</h1>
+      <h1 class="balance-uah">₴0.00</h1>
+      <p class="min-balance">Please remember to check your Balance minimum</p>
+      <button class="check-limit">Check your min. limit</button>
+      <div class="limit-calculation">
+        <p>
+          <strong>Your Balance limit is equal UAH: </strong
+          ><span class="limit"></span>
+        </p>
+      </div>
       <div class="inc-exp-container">
         <div>
           <h4>Income</h4>
@@ -32,6 +40,10 @@
       </ul>
       <h3>Add new transaction</h3>
       <form id="form">
+        <div class="form-control">
+          <label for="Date">Date</label>
+          <input type="date" name="calendar" id="date" />
+        </div>
         <div class="form-control">
           <label for="text">Text</label>
           <input type="text" id="text" placeholder="Enter text..." />
